real/FortranTips/output/impure_elemental.out
[*] Running ikos preprocessor
[*] Running ikos analyzer
[*] Translating LLVM bitcode to AR
[*] Running liveness analysis
[*] Running widening hint analysis
[*] Running interprocedural value analysis
[*] Analyzing entry point 'MAIN_'
[*] Checking properties for entry point 'MAIN_'

# Time stats:
ikos-analyzer: 8.186 sec
ikos-pp      : 0.010 sec

# Summary:
Total number of checks                : 95
Total number of unreachable checks    : 0
Total number of safe checks           : 91
Total number of definite unsafe checks: 3
Total number of warnings              : 1

The program is definitely UNSAFE

# Results
integer/impure_elemental.f90: In function 'm_print_pow_':
integer/impure_elemental.f90:6:1: error: buffer overflow, pointer '(int32_t*)__arg0' accesses 4 bytes at offset between 9223372036854775807 and -9223372036854775808 bytes of global variable '.STATICS3' of size 40 bytes
print "(i0,'^',i0,' = ',i0)",i, pow, i**pow
^
integer/impure_elemental.f90: In function 'm_print_pow_':
integer/impure_elemental.f90:6:1: error: buffer overflow, pointer '(int32_t*)__arg0' accesses 4 bytes at offset between 9223372036854775807 and -9223372036854775808 bytes of global variable '.STATICS3' of size 40 bytes
print "(i0,'^',i0,' = ',i0)",i, pow, i**pow
^
integer/impure_elemental.f90: In function 'MAIN_':
integer/impure_elemental.f90:12:1: error: pointer arithmetic overflow
call print_pow(i=[1,3,5], pow=3) ; print*
^
integer/impure_elemental.f90: In function 'MAIN_':
integer/impure_elemental.f90:12:1: warning: pointer arithmetic might overflow
call print_pow(i=[1,3,5], pow=3) ; print*
^
